--- a/pom.xml
+++ b/pom.xml
@@ -3,9 +3,31 @@
   <groupId>com.volcanic-cupcake</groupId>
   <artifactId>tgAyeBot</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+	
+<build>
+  <plugins>
+    <plugin>
+      <artifactId>maven-assembly-plugin</artifactId>
+      <configuration>
+        <archive>
+          <manifest>
+            <mainClass>tgAyeBot.Main</mainClass>
+          </manifest>
+        </archive>
+        <descriptorRefs>
+          <descriptorRef>jar-with-dependencies</descriptorRef>
+        </descriptorRefs>
+      </configuration>
+    </plugin>
+  </plugins>
+</build>
+
   <properties>
     <java.version>17</java.version>
+	<maven.compiler.source>1.8</maven.compiler.source>
+     <maven.compiler.target>1.8</maven.compiler.target>
   </properties>
+
   <dependencies>
 	<dependency>
   		<groupId>com.github.pengrad</groupId>
@@ -13,4 +35,5 @@
   		<version>5.7.0</version>
 	</dependency>
   </dependencies>
+
 </project>
